--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
 <title>Sanju Joseph</title>
+<link rel="icon" href="favicon.ico" type="image/ico">
 </head>
 <body>
 <div id="root"></div>
